Fixed some sonar issues (#161)