@@ -23,7 +23,7 @@ public abstract class BaseConnectionDispatcher<T extends BaseConnectionObserver>
         observer.stream()
                 .filter(o -> o.getConnectionId() != null)
                 .filter(o -> o.getConnectionId().equals(connectionId))
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(o -> {
                     if (LOGGER.isTraceEnabled()) {
                         LOGGER.trace(MarkerFactory.getMarker(ConnectionHolder.getInstance().getConfig(connectionId).getName()),
